impl controllers from spec
