# src/main/java/net/cserny/move/MediaMoveController.java
@@ -3,8 +3,10 @@ package net.cserny.move;
 import lombok.extern.slf4j.Slf4j;
 import net.cserny.generated.MediaMoveError;
 import net.cserny.generated.MediaMoveRequest;
+import net.cserny.generated.MediaMoveResourceApi;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -17,22 +19,24 @@ import java.util.List;
 @RestController
 @RequestMapping(value = "/api/v1/media-moves",
         produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
-public class MediaMoveController {
+public class MediaMoveController implements MediaMoveResourceApi {
 
     @Autowired
     MediaMoveService service;
 
     @PostMapping
-    public List<MediaMoveError> moveMedia(@RequestBody MediaMoveRequest moveRequest) {
-        return service.moveMedia(moveRequest.getFileGroup(), moveRequest.getType());
+    @Override
+    public ResponseEntity<List<MediaMoveError>> moveMedia(@RequestBody MediaMoveRequest moveRequest) {
+        return ResponseEntity.ok(service.moveMedia(moveRequest.getFileGroup(), moveRequest.getType()));
     }
 
     @PostMapping("/all")
-    public List<MediaMoveError> moveAllMedia(@RequestBody List<MediaMoveRequest> moveRequests) {
+    @Override
+    public ResponseEntity<List<MediaMoveError>> moveAllMedia(@RequestBody List<MediaMoveRequest> moveRequests) {
         List<MediaMoveError> errors = new ArrayList<>();
         for (MediaMoveRequest request : moveRequests) {
             errors.addAll(service.moveMedia(request.getFileGroup(), request.getType()));
         }
-        return errors;
+        return ResponseEntity.ok(errors);
     }
 }
